# Randomized-Database-Index

./: .gitignore  Cargo.toml  README.md  build.rs  generator.py  postprocessing.py  requirements.txt  workloads.py
proto/: operation.proto
protos/: operation.proto
report/: references.bib  report.tex
scripts/: distribution_comps.py  generator.py  postprocessing.py  runner.py  workloads.py
src/: check_scapegoat.rs  database.rs  executor.rs  indexes.rs  logger.rs  main  main.rs  types.rs
src/indexes/: abstract_index.rs  btree_index.rs  hashmap_index.rs  pair.rs  scapegoat_index.rs  skiplist_index.rs  splaytree_index.rs  treap_index.rs  treap_random_index.rs
src/indexes/treap/: mod.rs  node.rs  treap_index.rs
