[package]
name = "randomized-database-indexes"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
protobuf-codegen = "3.7.1"
protoc-bin-vendored = "3.1.0"


[dependencies]
scapegoat = "2.3.0"
tinyvec = "1.5.1"  
micromath = "2.1.0"  
smallnum = "0.4.1"  

[[bin]]
name = "check_scapegoat"
path = "src/check_scapegoat.rs"